<resources>
    <string name="app_name">港付通</string>
    <string name="app_description">Ecology生态,包含paws各种应用结合</string>
    <string name="function_known">明白</string>
    <string name="function_submit">提交</string>
    <string name="function_next_step">下一步</string>
    <string name="function_save">保存</string>
    <string name="function_finish">完成</string>
    <string name="function_set">设置</string>
    <string name="function_to_set">去设置</string>
    <string name="function_change">修改</string>
    <string name="function_invite_friend">邀请好友</string>
    <string name="function_login">登录</string>
    <string name="function_logout">退出</string>
    <string name="function_forget_pwd_">忘记密码?</string>
    <string name="function_cancel">取消</string>
    <string name="function_sure">确定</string>
    <string name="function_load">加载</string>
    <string name="function_copy">复制</string>
    <string name="function_bind_new_email">绑定新邮箱</string>
    <string name="function_reset">重置</string>
    <string name="function_bind_new_mobile">绑定新手机号</string>
    <string name="function_verify">验证</string>
    <string name="function_at_once_import">马上导入</string>
    <string name="function_begin_import">开始导入</string>
    <string name="function_import">导入</string>
    <string name="function_create_wallet">创建钱包</string>
    <string name="function_copy_secret_address">复制收款地址</string>
    <string name="function_share_to">分享到</string>
    <string name="function_confirm">确认</string>
    <string name="function_delete">删除</string>
    <string name="function_change_password">修改密码</string>
    <string name="function_export_secret">导出私钥</string>
    <string name="function_export_keystore">导出keystore</string>
    <string name="function_gathering">收款</string>
    <string name="function_transfer">转账</string>
    <string name="function_confirm_transfer">确认转账</string>
    <string name="function_revoke">撤销</string>
    <string name="function_wait">等待</string>
    <string name="function_abandon">放弃</string>
    <string name="function_go">前往</string>
    <string name="function_get_random_code">获取验证码</string>
    <string name="function_photo">拍照</string>
    <string name="function_to_login">去登录</string>
    <string name="function_have_known">知道了</string>
    <string name="function_turn_out">转出</string>
    <string name="function_at_once_backup">立即备份</string>
    <string name="function_show_qr_code">显示二维码</string>
    <string name="function_close">关闭</string>
    <string name="function_add">添加</string>
    <string name="function_has_add">已添加</string>
    <string name="function_processing">待审核</string>
    <string name="function_approved">已通过</string>
    <string name="function_rejected">拒绝</string>
    <string name="function_revoked">已撤销</string>
    <string name="function_completed">完成</string>
    <string name="function_failed">未通过</string>
    <string name="action_sign">奖励记录</string>
    <string name="action_save">@string/function_save</string>
    <string name="action_close">关闭</string>
    <string name="action_search">搜索</string>
    <string name="action_finish">@string/function_finish</string>
    <string name="action_wallet">资产</string>
    <string name="action_ecology">益享</string>
    <string name="action_add">新增</string>
    <string name="action_menu">菜单</string>
    <string name="action_qr_scan">扫一扫</string>
    <string name="action_contact">联系人</string>
    <string name="action_wallet_manager">钱包管理</string>
    <string name="action_asset_manage">资产管理</string>
    <string name="action_bank_card">银行卡管理</string>
    <string name="action_safety_center">安全中心</string>
    <string name="action_recode">记录</string>
    <string name="action_setting">@string/function_set</string>
    <string name="action_about">关于</string>
    <string name="action_refresh">刷新</string>
    <string name="action_browser">在浏览器打开</string>
    <string name="action_edit">编辑</string>
    <string name="action_cancel">取消</string>
    <string name="action_switch_language">切换语言</string>
    <string name="label_take_out_platform" formatted="false">转出&#160;%s</string>
    <string name="label_take_out_currency_record" formatted="false">转出%s记录</string>
    <string name="label_take_out_record_detail">转出详情</string>
    <string name="label_soft_setting">@string/action_setting</string>
    <string name="label_crowd_statistics">众筹统计</string>
    <string name="label_person_information">个人资料</string>
    <string name="label_change_nick_name">昵称</string>
    <string name="label_forget_password">找回密码</string>
    <string name="label_find_password">@string/label_forget_password</string>
    <string name="label_reset_password">重置密码</string>
    <string name="label_change_sex">性别</string>
    <string name="label_begin_certification">实名认证</string>
    <string name="label_upload_certification_photo">上传证件照片</string>
    <string name="label_show_certification_result">@string/label_begin_certification</string>
    <string name="label_change_password">修改登录密码</string>
    <string name="label_select_change_trans_password_type">选择验证方式</string>
    <string name="label_set_transaction_password">设置交易密码</string>
    <string name="label_register">注册</string>
    <string name="label_show_mobile">设置手机号</string>
    <string name="label_bind_mobile">绑定手机号</string>
    <string name="label_change_mobile">更换手机号码</string>
    <string name="label_bind_email">绑定邮箱</string>
    <string name="label_show_email">设置邮箱</string>
    <string name="label_change_email">更换邮箱</string>
    <string name="label_about">@string/action_about</string>
    <string name="label_sign">签到有礼</string>
    <string name="label_sign_reward">签到奖励</string>
    <string name="label_recommend_reward">推荐奖励</string>
    <string name="label_input_old_trans_password">重置支付密码</string>
    <string name="label_change_trans_password">重置交易密码</string>
    <string name="label_input_phone_trans_password">身份校验</string>
    <string name="label_change_trans_success">设置结果</string>
    <string name="label_search_filter">@string/action_search</string>
    <string name="label_add_contact">新建联系人</string>
    <string name="label_none" />
    <string name="label_currency_manager">添加新资产</string>
    <string name="label_wallet_manager">@string/action_wallet_manager</string>
    <string name="label_wallet_record">资产详情</string>
    <string name="label_wallet_take_out">@string/function_transfer</string>
    <string name="label_recommend_record">推荐记录</string>
    <string name="label_show_address_qr">收款码</string>
    <string name="label_export_secret">@string/function_export_secret</string>
    <string name="label_create_wallet">@string/function_create_wallet</string>
    <string name="label_contact_list">@string/action_contact</string>
    <string name="label_change_wallet_name">钱包名</string>
    <string name="label_import_wallet">导入钱包</string>
    <string name="label_export_keystore">@string/function_export_keystore</string>
    <string name="label_change_wallet_password">@string/function_change_password</string>
    <string name="label_show_trans_result">支付密码</string>
    <string name="label_verify_card_num">@string/label_input_phone_trans_password</string>
    <string name="label_ecology_service_agreement">港付通服务协议</string>
    <string name="label_service_secret_agreement">服务及隐私条款</string>
    <string name="label_wallet_service_secret_agreement">钱包服务及隐私条款</string>
    <string name="label_what_is_keystore_file">什么是&#160;Keystore&#160;文件?</string>
    <string name="label_what_is_secret_file">什么是明文私钥?</string>
    <string name="label_switch_locale">语言选择</string>
    <string name="label_choose_country">国家/地区</string>
    <string name="label_into" formatted="false">%s转入</string>
    <string name="label_into_record" formatted="false">%s转入记录</string>
    <string name="label_into_detail" formatted="false">%s转入详情</string>
    <string name="label_exchange_usdp">兑换GFT</string>
    <string name="label_add_bank">添加银行卡</string>
    <string name="label_bank_manager">银行卡管理</string>
    <string name="label_choose_bank">选择银行卡</string>
    <string name="label_exchange_recode">兑换记录</string>
    <string name="label_exchange_detail">兑换详情</string>
    <string name="base_total_lifecycle" formatted="false">%s生命周期:%s</string>
    <string name="base_total_cannot_support_method">当前不支持此方法</string>
    <string name="base_total_album_select">相册选择</string>
    <string name="base_total_take_photo">相机扫描</string>
    <string name="base_total_qr_analyze_not_require">解析数据异常</string>
    <string name="base_total_qr_analyze_error">图片解析失败</string>
    <string name="base_total_must_permission">您必须开启权限,才能进行之后的操作</string>
    <string name="base_total_no_pmn_to_picture">权限被禁止,无法选择图片</string>
    <string name="base_total_has_forbid_pmn_camera_storage">相机&#160;和&#160;存储&#160;权限已被禁止,请前往软件权限管理界面手动打开</string>
    <string name="base_total_select_fail">选取失败</string>
    <string name="base_total_picture_no_selected">图片未选中</string>
    <string name="base_total_please_login_again">请重新登录</string>
    <string name="base_total_no_permission">没有权限</string>
    <string name="base_total_exist_known_error_code" formatted="false">操作失败，已通知工作人员进行处理，请耐心等待:%d</string>
    <string name="base_total_json_syntax_exception">网络返回数据错误</string>
    <string name="base_total_null_pointer_exception">必须字段不能为null</string>
    <string name="base_total_io_exception">网络异常</string>
    <string name="base_total_other_exception">未知异常</string>
    <string name="base_total_upload_picture_error">上传图片失败</string>
    <string name="base_total_send_code_any_type" formatted="false">验证码已发送到%s,请注意查收</string>
    <string name="base_total_not_get_user_info">未获取到个人信息</string>
    <string name="activity_change_password_hint_old_password">请输入旧密码</string>
    <string name="activity_change_password_hint_one">请输入新的登录密码</string>
    <string name="activity_change_password_hint_two">请确认登录密码</string>
    <string name="activity_bind_mobile_country">国家/地区</string>
    <string name="activity_bind_mobile_china">中国大陆</string>
    <string name="activity_change_wallet_password_hint_alert">密码提示信息(可不填)</string>
    <string name="activity_change_wallet_password_label">忘记密码?私钥可重置密码。</string>
    <string name="activity_create_wallet_label_one">密码用于保护私钥和交易授权，强度非常重要</string>
    <string name="activity_create_wallet_label_two">港付通不存储密码，也无法帮您找回，请务必牢记</string>
    <string name="activity_create_wallet_hint_name">钱包名称(2&#8211;16位可见字符)</string>
    <string name="activity_create_wallet_hint_pwd">密码(8&#8211;16位字母数字组合)</string>
    <string name="activity_create_wallet_hint_confirm">确认密码(需与密码相同)</string>
    <string name="activity_create_wallet_hint_alert">@string/activity_change_wallet_password_hint_alert</string>
    <string name="activity_create_wallet_import">@string/label_import_wallet</string>
    <string name="activity_add_bank_please_name">请输入姓名</string>
    <string name="activity_add_bank_please_bank_name">请输入银行名称</string>
    <string name="activity_add_bank_please_branch_name">请输入开户支行</string>
    <string name="activity_add_bank_please_bank_number">请输入银行卡号</string>
    <string name="activity_add_bank_please_bank_number_again">请输入确认银行卡号</string>
    <string name="activity_add_bank_name">姓名</string>
    <string name="activity_add_bank_open_bank">开户银行</string>
    <string name="activity_add_bank_open_branch_bank">开户支行</string>
    <string name="activity_add_bank_bank_number">银行卡号</string>
    <string name="activity_add_bank_sure_number">确认卡号</string>
    <string name="fragment_import_wallet_secret_label">直接复制粘贴私钥内容至输入框。或者通过生成私钥内容的二维码，扫描录入。</string>
    <string name="fragment_import_wallet_secret_hint_secret">明文私钥</string>
    <string name="fragment_import_wallet_secret_hint_pwd">@string/fragment_import_wallet_keystore_hint_pwd</string>
    <string name="fragment_import_wallet_secret_hint_confirm">确认密码</string>
    <string name="fragment_import_wallet_secret_hint_alert">@string/activity_create_wallet_hint_alert</string>
    <string name="fragment_import_wallet_secret_jump">什么是私钥?</string>
</resources>