<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/view_padding_margin_48dp">

    <!---->
    <include layout="@layout/dark_layout_top_bar"/>

    <!--姓名-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/view_padding_margin_10dp"
        android:hint="@string/activity_change_wallet_password_hint_alert"
        app:hintTextAppearance="@style/TextInputLayout_HintTextAppearance">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_alert"
            style="@style/TextViewStandard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:imeOptions="actionNext"
            android:maxLength="20"
            android:singleLine="true"
            android:textColorHint="@color/black_text_993a4254"
            android:textSize="@dimen/text_size_title_15sp"/>
    </android.support.design.widget.TextInputLayout>

    <!--输入密码-->
    <EditText
        android:id="@+id/et_old_password"
        style="@style/TextViewStandard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_padding_margin_10dp"
        android:background="@color/main_color_white"
        android:hint="@string/activity_change_password_hint_old_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:maxLines="1"
        android:paddingEnd="@dimen/view_padding_margin_16dp"
        android:paddingStart="@dimen/view_padding_margin_16dp"
        android:textColorHint="@color/black_text_663a4254"
        android:textSize="@dimen/text_size_title_15sp"/>

    <com.linktech.gft.view.DividerView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_line_width_1dp"/>

    <EditText
        android:id="@+id/et_password_one"
        style="@style/TextViewStandard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color_white"
        android:hint="@string/activity_change_password_hint_one"
        android:inputType="textPassword"
        android:maxLength="16"
        android:maxLines="1"
        android:paddingEnd="@dimen/view_padding_margin_16dp"
        android:paddingStart="@dimen/view_padding_margin_16dp"
        android:textColorHint="@color/black_text_663a4254"
        android:textSize="@dimen/text_size_title_15sp"/>

    <com.linktech.gft.view.DividerView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_line_width_1dp"/>

    <EditText
        android:id="@+id/et_password_two"
        style="@style/TextViewStandard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_padding_margin_40dp"
        android:background="@color/main_color_white"
        android:hint="@string/activity_change_password_hint_two"
        android:inputType="textPassword"
        android:maxLength="16"
        android:maxLines="1"
        android:paddingEnd="@dimen/view_padding_margin_16dp"
        android:paddingStart="@dimen/view_padding_margin_16dp"
        android:textColorHint="@color/black_text_663a4254"
        android:textSize="@dimen/text_size_title_15sp"/>

    <!--提交-->
    <include layout="@layout/layout_common_dark_function_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="bottom"
        android:text="@string/activity_change_wallet_password_label"
        android:textColor="@color/black_text_cc3a4254"
        android:textSize="@dimen/text_size_normal_14sp"/>

    <!--import-->
    <TextView
        android:id="@+id/tv_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/view_padding_margin_8dp"
        android:text="@string/function_at_once_import"
        android:textColor="@color/toolbar_second_color_primary"
        android:textSize="@dimen/text_size_normal_14sp"/>
</LinearLayout>