<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="always"
    android:scrollbars="none">

    <LinearLayout
        android:paddingBottom="@dimen/view_padding_margin_32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            android:padding="@dimen/view_padding_margin_16dp"
            android:text="@string/fragment_import_wallet_secret_label"
            android:textColor="@color/black_text_454553"
            android:textSize="@dimen/text_size_normal_14sp"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/et_secret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_padding_margin_16dp"
            android:background="@drawable/shape_bg_transparent_border_e8e8e8"
            android:gravity="start"
            android:hint="@string/fragment_import_wallet_secret_hint_secret"
            android:minLines="5"
            android:padding="@dimen/view_padding_margin_16dp"
            android:textSize="@dimen/text_size_normal_14sp"/>

        <!--密码-->
        <EditText
            android:id="@+id/et_password_one"
            style="@style/TextViewStandard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_color_white"
            android:hint="@string/fragment_import_wallet_secret_hint_pwd"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:maxLength="16"
            android:singleLine="true"
            android:textColorHint="@color/black_text_663a4254"
            android:textSize="@dimen/text_size_title_15sp"/>

        <com.linktech.gft.view.DividerView
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_line_width_1dp"/>

        <!--确认密码-->
        <EditText
            android:id="@+id/et_password_two"
            style="@style/TextViewStandard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_color_white"
            android:hint="@string/fragment_import_wallet_secret_hint_confirm"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:maxLength="16"
            android:singleLine="true"
            android:textColorHint="@color/black_text_663a4254"
            android:textSize="@dimen/text_size_title_15sp"/>

        <com.linktech.gft.view.DividerView
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_line_width_1dp"/>

        <!--密码提示信息(可不填)-->
        <EditText
            android:id="@+id/et_alert"
            style="@style/TextViewStandard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_color_white"
            android:hint="@string/fragment_import_wallet_secret_hint_alert"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textSize="@dimen/text_size_title_15sp"/>

        <!--协议-->
        <CheckBox
            android:id="@+id/cb_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/view_padding_margin_24dp"
            android:layout_marginEnd="@dimen/view_padding_margin_16dp"
            android:layout_marginStart="@dimen/view_padding_margin_16dp"
            android:layout_marginTop="@dimen/view_padding_margin_16dp"
            android:textColor="@color/black_text_171a3f"
            android:textSize="@dimen/text_size_small_12sp"
            tools:checked="true"
            tools:text="我已仔细阅读并同意服务及隐私条款"/>

        <!---->
        <include layout="@layout/layout_common_dark_function_button"/>

        <TextView
            android:id="@+id/tv_secret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/view_padding_margin_64dp"
            android:text="@string/fragment_import_wallet_secret_jump"
            android:textColor="@color/toolbar_second_color_primary"
            android:textSize="@dimen/text_size_normal_14sp"/>
    </LinearLayout>

</ScrollView>